--- a/english.html
+++ b/english.html
@@ -319,6 +319,8 @@ Error message and password prompt
 
 <li>Bjork</li>
 
+<li>Blended soup</li>
+
 <li>blue-marble-hood</li>
 
 <li>Bolognese-alike</li>
@@ -374,6 +376,8 @@ Error message and password prompt
 <li>Crust dough extras</li>
 
 <li>Crust dough extras 2</li>
+
+<li>Cucumber salad with red onion and dill</li>
 
 <li>Dalya`s room</li>
 
@@ -575,6 +579,8 @@ Error message and password prompt
 
 <li>Less is more</li>
 
+<li>Lettuce salad</li>
+
 <li>Life is for those who can't deal with drugs</li>
 
 <li>Life is not About Talking</li>
@@ -586,6 +592,8 @@ Error message and password prompt
 <li>Lotus books</li>
 
 <li>Love</li>
+
+<li>Majadra</li>
 
 <li>Mangold and tofu pastry</li>
 
@@ -659,6 +667,8 @@ Error message and password prompt
 
 <li>Orange lentils' dal</li>
 
+<li>Orange soup</li>
+
 <li>Our Father</li>
 
 <li>Outer sisters</li>
@@ -682,6 +692,8 @@ Error message and password prompt
 <li>Philip Seymour Hoffman</li>
 
 <li>Philipp</li>
+
+<li>Pickles</li>
 
 <li>Pina Bausch</li>
 
@@ -9401,6 +9413,14 @@ Is where I want to be
 
  &lt;&lt;heblink [[ביורק]]&gt;&gt;</pre>
 </div>
+<div created="20200306151232240" modified="20200306151351913" tags="[[Vegan recipes]] Recipes [[Food addicts]] [[Iry claims]]" title="Blended soup">
+<pre>
+[img[pictures/marak-tachoon.jpg]]
+
+
+
+ &lt;&lt;heblink [[מרק טחון]]&gt;&gt;</pre>
+</div>
 <div created="20200213181607810" modified="20200217131951872" tags="[[On the road to somewhere]] [[Iry and Gura]] [[The global village]] [[Dreams that we've dreamt]]" title="blue-marble-hood">
 <pre>[img[pictures/blue-marble.jpg]]
 
@@ -9772,6 +9792,14 @@ Sometimes I ask myself, do you have a [[spirit level|https://en.wikipedia.org/wi
 
 </pre>
 </div>
+<div created="20200306152150254" modified="20200306152302060" tags="Recipes [[Vegan recipes]] [[Christmas dinner Recipes]]" title="Cucumber salad with red onion and dill">
+<pre>
+[img[pictures/salat-melafefonim.jpg]]
+
+
+ &lt;&lt;heblink [[סלט מלפפונים עם בצל סגול ושמיר]]&gt;&gt;
+</pre>
+</div>
 <div created="20200226063122808" modified="20200226063326805" tags="[[Here in the Ghetto]] [[How many songs can you even invent at all]] Houses [[True stories]]" title="Dalya`s room">
 <pre>[img[pictures/dalya.jpg]]
 
@@ -10092,7 +10120,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
 
 </pre>
 </div>
-<div created="20200212161010633" modified="20200306145603081" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
+<div created="20200212161010633" modified="20200306152242576" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -11029,6 +11057,15 @@ Bottom line is, if you're standing in front of whatever it is and hesitating, wo
 
 </pre>
 </div>
+<div created="20200306151844387" modified="20200306152005125" tags="[[Christmas dinner Recipes]] Recipes [[Vegan recipes]]" title="Lettuce salad">
+<pre>
+[img[pictures/salat-chasa.jpg]]
+
+
+
+ &lt;&lt;heblink [[סלט חסה]]&gt;&gt;
+</pre>
+</div>
 <div created="20200219153806611" modified="20200219154028814" title="Life is for those who can't deal with drugs">
 <pre>[img[pictures/hachaim-noadoo.gif]]
 
@@ -11091,6 +11128,13 @@ For example, it seethes me when people use words purposelessly, like the word lo
  &lt;&lt;heblink [[אהבה]]&gt;&gt;
 
 </pre>
+</div>
+<div created="20200306150637544" modified="20200306150745948" tags="Recipes [[Vegan recipes]] [[Christmas dinner Recipes]]" title="Majadra">
+<pre>
+[img[pictures/mejadra-matconim.jpg]]
+
+
+ &lt;&lt;heblink [[מג'דרה]]&gt;&gt;</pre>
 </div>
 <div created="20200306145442838" modified="20200306145624328" tags="[[Vegan recipes]] Recipes [[what does a thing assemble]] [[Food addicts]]" title="Mangold and tofu pastry">
 <pre>
@@ -11575,6 +11619,13 @@ It seemed like, everything is fine''
  &lt;&lt;heblink [[דאל עדשים כתומות]]&gt;&gt;
 </pre>
 </div>
+<div created="20200306151515860" modified="20200306151719019" tags="Recipes [[Christmas dinner Recipes]]" title="Orange soup">
+<pre>
+[img[pictures/marak-katom.jpg]]
+
+
+ &lt;&lt;heblink [[מרק כתום בסיר גדול]]&gt;&gt;</pre>
+</div>
 <div created="20200217171010937" modified="20200217171403899" tags="[[The estate]]" title="Our Father">
 <pre>[img[pictures/avinu.jpg]]
 
@@ -11719,6 +11770,16 @@ Love him as a sister,
 <pre>[img[pictures/phillip.jpg]]
 
  &lt;&lt;heblink [[פיליפ]]&gt;&gt;
+</pre>
+</div>
+<div created="20200306150957171" modified="20200306151110046" tags="Recipes [[Vegan recipes]] [[Christmas dinner Recipes]]" title="Pickles">
+<pre>
+[img[pictures/melafefonim-chamuzim.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[מלפפונים חמוצים]]&gt;&gt;
 </pre>
 </div>
 <div created="20200213181241224" modified="20200216183823842" tags="[[Outer sisters]] [[Iry claims]]" title="Pina Bausch">
