--- a/index.html
+++ b/index.html
@@ -9628,7 +9628,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200306145655405" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200306152324532" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -15383,7 +15383,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Mangold and tofu pastry]]&gt;&gt;</pre>
 </div>
-<div created="20170402193858167" modified="20180605133225529" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] מתכונים" title="מג'דרה">
+<div created="20170402193858167" modified="20200306150901125" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] מתכונים" title="מג'דרה">
 <pre>[img[pictures/mejadra-matconim.jpg]]
 
 !!![[גורה]]:
@@ -15396,7 +15396,9 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 4. מסננים את העדשים, מערבבים אותם לתוך האורז, ממליחים לפי הטעם, ומפזרים מעל את הבצל המטוגן.
 
-</pre>
+
+
+&lt;&lt;englink [[Majadra]]&gt;&gt;</pre>
 </div>
 <div created="20180410150429522" modified="20190617134212668" tags="[[הנחלה בה גדלתי]] [[חיות אוכל]] [[כשהם ישנים]] [[מטא בדיון]] מטבחים" title="מגבות מטבח">
 <pre>[img[pictures/magavot-mitbach.jpg]]
@@ -15667,7 +15669,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170409072116141" modified="20180605133247095" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] מתכונים" title="מלפפונים חמוצים">
+<div created="20170409072116141" modified="20200306151210477" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] מתכונים" title="מלפפונים חמוצים">
 <pre>[img[pictures/melafefonim-chamuzim.jpg]]
 
 !!![[אלפרד]]:
@@ -15694,6 +15696,9 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 אני אוהבת את המלפפונים כבר אחרי יום- יום וחצי אבל זה לוקח כמה ימים, ורגע לפני שהם מגיעים לצבע הרצוי מכניסים למקרר כך שהתהליך יואט מאד.
 
+
+
+&lt;&lt;englink [[Pickles]]&gt;&gt;
 </pre>
 </div>
 <div created="20170527145749109" modified="20200215110105662" tags="[[בחוות החיות]]" title="ממשיכים לדמם">
@@ -15879,7 +15884,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20181101191733525" modified="20181101203139424" tags="[[אירי טוענת]] [[חיות אוכל]] מתכונים [[מתכונים טבעוניים]]" title="מרק טחון">
+<div created="20181101191733525" modified="20200306151449944" tags="[[אירי טוענת]] [[חיות אוכל]] מתכונים [[מתכונים טבעוניים]]" title="מרק טחון">
 <pre>[img[pictures/marak-tachoon.jpg]]
 
 !!![[אירי]]:
@@ -15900,9 +15905,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 5. מוסיפים עוד מעט מים, מחזירים את הסיר לכיריים ומבשלים עד רתיחה. מנמיכים את הלהבה
 
-6. מתבלים על פי הטעם במלח ים גס, פלפל שחור גרוס, חצי כפית שמן חריף, 2-3 טיפות של חומץ בלסמי סמיך, ממשיכים לבשל עוד 10-20 דקות, ואם צריך מתקנים את התיבול.</pre>
+6. מתבלים על פי הטעם במלח ים גס, פלפל שחור גרוס, חצי כפית שמן חריף, 2-3 טיפות של חומץ בלסמי סמיך, ממשיכים לבשל עוד 10-20 דקות, ואם צריך מתקנים את התיבול.
+
+
+
+
+&lt;&lt;englink [[Blended soup]]&gt;&gt;
+</pre>
 </div>
-<div created="20170402151609777" modified="20180605133302441" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="מרק כתום בסיר גדול">
+<div created="20170402151609777" modified="20200306151738358" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="מרק כתום בסיר גדול">
 <pre>[img[pictures/marak-katom.jpg]]
 
 !!![[יויו]]:
@@ -15926,7 +15937,8 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 מגישים עם עירית קצוצה.
 
 
-</pre>
+
+&lt;&lt;englink [[Orange soup]]&gt;&gt;</pre>
 </div>
 <div created="20170924155536957" modified="20200219181058042" tags="[[חיות אוכל]] מתכונים" title="מרק עם קניידלך">
 <pre>[img[pictures/marak-im-kneydalach.jpg]]
@@ -16403,7 +16415,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Stories I`ve told Norma]]&gt;&gt;</pre>
 </div>
-<div created="20170407131936343" modified="20180605133320401" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] מתכונים" title="סלט חסה">
+<div created="20170407131936343" modified="20200306152054380" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] מתכונים" title="סלט חסה">
 <pre>[img[pictures/salat-chasa.jpg]]
 
 !!![[יויו]]:
@@ -16417,9 +16429,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 קורעים את העלים לחתיכות.
 
 מוזגים מעל שמן זית (כמה כפות), חומץ תפוחים (כפית) ומלח גס (קורט), מערבבים עם כפות הידיים בעדינות מהצדדים פנימה ומגישים.
-</pre>
+
+
+
+&lt;&lt;englink [[Lettuce salad]]&gt;&gt;</pre>
 </div>
-<div created="20170407140441796" modified="20180605133341987" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] מתכונים" title="סלט מלפפונים עם בצל סגול ושמיר">
+<div created="20170407140441796" modified="20200306152355028" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] מתכונים" title="סלט מלפפונים עם בצל סגול ושמיר">
 <pre>[img[pictures/salat-melafefonim.jpg]]
 
 !!![[יויו]]:
@@ -16428,7 +16443,10 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * פורסים בצל קטן סגול לפרוסות דקות, ומפרקים אותו מעל.
 * קוצצים חופן שמיר ומפזרים מעל
 * בקערה קטנה מערבבים: רבע כוס שמן זית, כפית סוכר, כף חומץ, קורט מלח, קורט פלפל שחור ויוצקים מעל.
-* מערבבים מהחוץ לפנים ומגישים.</pre>
+* מערבבים מהחוץ לפנים ומגישים.
+
+
+&lt;&lt;englink [[Cucumber salad with red onion and dill]]&gt;&gt;</pre>
 </div>
 <div created="20170406150319861" modified="20180605133405261" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] מתכונים" title="סלט עגבניות עם שום">
 <pre>[img[pictures/salat-agvanyot.jpg]]
