--- a/english.html
+++ b/english.html
@@ -315,6 +315,8 @@ Error message and password prompt
 
 <li>bg</li>
 
+<li>Birthday cake</li>
+
 <li>Bishvil Haprachim</li>
 
 <li>Bjork</li>
@@ -326,6 +328,8 @@ Error message and password prompt
 <li>Bolognese-alike</li>
 
 <li>Cafe Müller</li>
+
+<li>Caraway cookies</li>
 
 <li>Cat Sisters</li>
 
@@ -430,6 +434,8 @@ Error message and password prompt
 <li>Fargo</li>
 
 <li>Fauré's Requiem</li>
+
+<li>Fig cakes</li>
 
 <li>Films</li>
 
@@ -577,6 +583,8 @@ Error message and password prompt
 
 <li>Lemons</li>
 
+<li>Lentil salad</li>
+
 <li>Less is more</li>
 
 <li>Lettuce salad</li>
@@ -633,6 +641,8 @@ Error message and password prompt
 
 <li>Miznon</li>
 
+<li>Mocha cake</li>
+
 <li>Monkeys with car keys</li>
 
 <li>Mothers</li>
@@ -673,6 +683,8 @@ Error message and password prompt
 
 <li>Outer sisters</li>
 
+<li>Ovened tomatoes</li>
+
 <li>Panettone</li>
 
 <li>Papa Yoel</li>
@@ -696,6 +708,8 @@ Error message and password prompt
 <li>Pickles</li>
 
 <li>Pina Bausch</li>
+
+<li>Poppy seed chocolate cake</li>
 
 <li>Potatoes' Gratin</li>
 
@@ -747,6 +761,8 @@ Error message and password prompt
 
 <li>Romema</li>
 
+<li>Roots salad</li>
+
 <li>Rosh Hashana dinner</li>
 
 <li>Rushell</li>
@@ -772,6 +788,8 @@ Error message and password prompt
 <li>Single parent children</li>
 
 <li>Six feet uner</li>
+
+<li>Sliced beet</li>
 
 <li>Smartphone</li>
 
@@ -878,6 +896,8 @@ Error message and password prompt
 <li>TLV</li>
 
 <li>To draw</li>
+
+<li>Tomato salad</li>
 
 <li>Tomer</li>
 
@@ -9370,6 +9390,15 @@ Beautiful Ahal is the beautiful [[Ahal Eden|https://www.instagram.com/ahaleden/]
 <div _canonical_uri="pictures/bjVmMLrT1A6cNJ2g.jpg" created="20161024112200319" modified="20170119202336098" tags="" title="bg" type="image/jpeg">
 <pre></pre>
 </div>
+<div created="20200306155442102" modified="20200306155613164" tags="Children Recipes [[When they sleep]] [[Food addicts]] Baking" title="Birthday cake">
+<pre>
+[img[pictures/birthday-cake.jpg]]
+
+
+
+ &lt;&lt;heblink [[עוגת יום הולדת]]&gt;&gt;
+</pre>
+</div>
 <div created="20200217163534124" modified="20200217164535436" tags="[[Here in the Ghetto]]" title="Bishvil Haprachim">
 <pre>[img[pictures/bishvil-haprachim.jpg]]
 
@@ -9452,6 +9481,16 @@ The idea of the blue marble is the continuation of Iry's thoughts of [[the villa
  &lt;&lt;heblink [[קפה מילר]]&gt;&gt;
 
 
+</pre>
+</div>
+<div created="20200306155158597" modified="20200306155315935" tags="Recipes [[Christmas dinner Recipes]] Baking" title="Caraway cookies">
+<pre>
+[img[pictures/ugiyot-kimel.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[עוגיות קימל]]&gt;&gt;
 </pre>
 </div>
 <div created="20200213183239085" modified="20200213212523487" tags="[[Monkeys with car keys]]" title="Cat Sisters">
@@ -10120,7 +10159,15 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
 
 </pre>
 </div>
-<div created="20200212161010633" modified="20200306152242576" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
+<div created="20200306154855597" modified="20200306155017761" tags="Baking Recipes [[When they sleep]] [[Food addicts]]" title="Fig cakes">
+<pre>
+[img[pictures/ugat-teenim.jpg]]
+
+
+ &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
+</pre>
+</div>
+<div created="20200212161010633" modified="20200306160547636" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -11032,6 +11079,14 @@ Don't want to be a lemonade, I've got sugar in my bitterness, like the happiness
  &lt;&lt;heblink [[לימונים]]&gt;&gt;
 </pre>
 </div>
+<div created="20200306153441167" modified="20200306153601813" tags="Recipes [[Vegan recipes]] [[Christmas dinner Recipes]]" title="Lentil salad">
+<pre>
+[img[pictures/salat-adashim.jpg]]
+
+
+
+ &lt;&lt;heblink [[סלט עדשים עם כוסברה ובצל קצוץ]]&gt;&gt;</pre>
+</div>
 <div created="20200215225741395" modified="20200219132954190" tags="Kitchens [[The kitchen by Genevieve]]" title="Less is more">
 <pre>[img[pictures/less-is-more.jpg]]
 
@@ -11385,6 +11440,15 @@ The [[Miznon|https://miznon.com/]] that's in the picture is on 30 King George, n
 
 </pre>
 </div>
+<div created="20200306155922906" modified="20200306160026947" tags="Recipes Baking [[Christmas dinner Recipes]]" title="Mocha cake">
+<pre>
+[img[pictures/ugat-moka.jpg]]
+
+
+
+ &lt;&lt;heblink [[עוגת מוקה]]&gt;&gt;
+</pre>
+</div>
 <div created="20200202190317522" modified="20200217211913122" tags="[[TV Series]] TV [[The global village]]" title="Monkeys with car keys">
 <pre>[img[pictures/kofim-memunaim.jpg]]
 
@@ -11657,6 +11721,14 @@ Here in the [[archive|The archive's trustees]] we add from time to time, with lo
 
 </pre>
 </div>
+<div created="20200306154549485" modified="20200306154837687" tags="[[On the road to somewhere]] Recipes Houses [[Vegan recipes]] [[Food addicts]] Kitchens" title="Ovened tomatoes">
+<pre>
+[img[pictures/agvanyot-batanoor.jpg]]
+
+
+
+ &lt;&lt;heblink [[עגבניות בתנור]]&gt;&gt;</pre>
+</div>
 <div created="20200219173952522" modified="20200219174045940" tags="[[Christmas dinner Recipes]] Recipes" title="Panettone">
 <pre>[img[pictures/panatone.jpg]]
 
@@ -11798,6 +11870,16 @@ And [[this|https://www.youtube.com/watch?v=WZd2SkydIXA]] is a performance whose 
 
 
  &lt;&lt;heblink [[פינה באוש]]&gt;&gt;</pre>
+</div>
+<div created="20200306160456816" modified="20200306160805616" tags="Baking [[When they sleep]] Recipes [[Food addicts]]" title="Poppy seed chocolate cake">
+<pre>
+[img[pictures/pereg-shokolad.jpg
+]]
+
+
+
+
+ &lt;&lt;heblink [[עוגת פרג שוקולד]]&gt;&gt;</pre>
 </div>
 <div created="20200306135928877" modified="20200306141653405" tags="Recipes [[Christmas dinner Recipes]]" title="Potatoes' Gratin">
 <pre>
@@ -12083,6 +12165,14 @@ The building, the strings and what's between them.
  &lt;&lt;heblink [[רוממה]]&gt;&gt;
 </pre>
 </div>
+<div created="20200306154007569" modified="20200306154135248" tags="Recipes [[Christmas dinner Recipes]] [[Vegan recipes]]" title="Roots salad">
+<pre>
+[img[pictures/salat-shorashim.jpg]]
+
+
+
+ &lt;&lt;heblink [[סלט שורשים חתוכים למקלונים בוהק משמן זית, לימון, מלח ושמן שומשום]]&gt;&gt;</pre>
+</div>
 <div created="20200215111759981" modified="20200219181335965" tags="Meals [[Food addicts]] [[Monkeys with car keys]]" title="Rosh Hashana dinner">
 <pre>[img[pictures/aruchat-rosh-hashana.jpg]]
 
@@ -12129,16 +12219,13 @@ Rushell is the youngest daughter of [[Genevieve]], she was born in 2000, she's i
  &lt;&lt;heblink [[מחפשת את אירי]]&gt;&gt;
 </pre>
 </div>
-<div created="20200219170734669" modified="20200219170944403" tags="Baking [[Food addicts]] Recipes" title="Semolina cake">
-<pre>[img[pictures/ugat-solet.jpg]]
+<div created="20200306160158816" modified="20200306160314921" tags="[[Food addicts]] Baking Recipes" title="Semolina cake">
+<pre>
+[img[pictures/ugat-solet.jpg]]
 
 
 
- &lt;&lt;heblink [[עוגת סולת]]&gt;&gt;
-
-
-
-</pre>
+ &lt;&lt;heblink [[עוגת סולת]]&gt;&gt;</pre>
 </div>
 <div created="20200306133247437" modified="20200306133556733" tags="[[Coen sister]]" title="Send">
 <pre>
@@ -12221,6 +12308,15 @@ Time heals us, and now, mother and us have [[Joseph|Jozef Abaroa]] and Alfred an
 
 
  &lt;&lt;heblink [[עמוק באדמה]]&gt;&gt;
+</pre>
+</div>
+<div created="20200306154256452" modified="20200306154420534" tags="Recipes [[Christmas dinner Recipes]] [[Vegan recipes]]" title="Sliced beet">
+<pre>
+[img[pictures/selek.jpg]]
+
+
+
+ &lt;&lt;heblink [[סלק מבושל]]&gt;&gt;
 </pre>
 </div>
 <div created="20200226104956723" modified="20200226105120112" tags="[[Monkeys with car keys]] [[True stories]] Metafiction" title="Smartphone">
@@ -13095,6 +13191,17 @@ The TLV is totally here in the ghetto, at the triangle between Ha Hashmonaim, Ca
 
 
  &lt;&lt;heblink [[לצייר]]&gt;&gt;</pre>
+</div>
+<div created="20200306153138336" modified="20200306153254879" tags="Recipes [[Christmas dinner Recipes]] [[Vegan recipes]]" title="Tomato salad">
+<pre>
+[img[pictures/salat-agvanyot.jpg]]
+
+
+
+ &lt;&lt;heblink [[סלט עגבניות עם שום]]&gt;&gt;
+
+
+</pre>
 </div>
 <div created="20200202164522080" modified="20200217161139999" tags="[[A friend]] [[Coen sister]]" title="Tomer">
 <pre>[img[pictures/tomer.jpg]]
