--- a/index.html
+++ b/index.html
@@ -9628,7 +9628,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200306152324532" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200306160740698" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -16448,7 +16448,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Cucumber salad with red onion and dill]]&gt;&gt;</pre>
 </div>
-<div created="20170406150319861" modified="20180605133405261" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] מתכונים" title="סלט עגבניות עם שום">
+<div created="20170406150319861" modified="20200306153412961" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] מתכונים" title="סלט עגבניות עם שום">
 <pre>[img[pictures/salat-agvanyot.jpg]]
 
 !!![[אווה]]:
@@ -16458,9 +16458,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * יוצקים שמן זית (משהו כמו שלוש כפות, שזה רבע כוס).
 * מפזרים קורט מלח גס.
 * מוסיפים כף-שתיים של מיץ לימון סחוט.
-* מערבבים ומגישים מיד או עד שעתיים מתום ההכנה.</pre>
+* מערבבים ומגישים מיד או עד שעתיים מתום ההכנה.
+
+
+
+
+&lt;&lt;englink [[Tomato salad]]&gt;&gt;</pre>
 </div>
-<div created="20170405181303189" modified="20180605133425968" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] מתכונים" title="סלט עדשים עם כוסברה ובצל קצוץ">
+<div created="20170405181303189" modified="20200306153650788" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] מתכונים" title="סלט עדשים עם כוסברה ובצל קצוץ">
 <pre>[img[pictures/salat-adashim.jpg]]
 
 !!![[אווה]]:
@@ -16471,9 +16476,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * מסננים את העדשים המבושלות.
 * בתוך קערה מערבבים את העדשים המסוננות, הבצל הקצוץ והכוסברה.
 * מתבלים בשמן זית, מיץ מחצי לימון ומלח ים גס.
-* אפשר להגיש מיד או מאוחר יותר או לאפסן במקרר ולשמור עד ארבעה ימים.</pre>
+* אפשר להגיש מיד או מאוחר יותר או לאפסן במקרר ולשמור עד ארבעה ימים.
+
+
+&lt;&lt;englink [[Lentil salad]]&gt;&gt;
+</pre>
 </div>
-<div created="20161115212458524" modified="20180605133447051" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] מתכונים" title="סלט שורשים חתוכים למקלונים בוהק משמן זית, לימון, מלח ושמן שומשום">
+<div created="20161115212458524" modified="20200306154228846" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] מתכונים" title="סלט שורשים חתוכים למקלונים בוהק משמן זית, לימון, מלח ושמן שומשום">
 <pre>[img[pictures/salat-shorashim.jpg]]
 
 !!![[אנה]]:
@@ -16496,9 +16505,10 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 מניחים על פרוסות הסלק ערימה מהסלט, מפזרים מעל זרעי שומשום שחור, ומגישים.
 
-</pre>
+
+&lt;&lt;englink [[Roots salad]]&gt;&gt;</pre>
 </div>
-<div created="20170407122044551" modified="20180605133509532" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] מתכונים" title="סלק מבושל">
+<div created="20170407122044551" modified="20200306154518908" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] מתכונים" title="סלק מבושל">
 <pre>[img[pictures/selek.jpg]]
 
 !!![[אווה]]:
@@ -16511,7 +16521,10 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * כשהם חמימים קולפי אותם. (הרוב מתקלך כמעט מעצמו ככל שהסלק מבושל).
 * חותכים לפלחים.
 * יוצקים שמן זית ובוזקים מלח ים גס.
-* מערבבים בעדינות ומגישים, וזה גם נשמר כמה ימים במקרר.</pre>
+* מערבבים בעדינות ומגישים, וזה גם נשמר כמה ימים במקרר.
+
+
+&lt;&lt;englink [[Sliced beet]]&gt;&gt;</pre>
 </div>
 <div created="20190713120312411" modified="20200226104231418" tags="סדרות טלוויזיה" title="סמוך על סול">
 <pre>[img[pictures/better-call-saul.jpg]]
@@ -16586,7 +16599,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Autumn]]&gt;&gt;</pre>
 </div>
-<div created="20200207164959548" modified="20200212201329063" tags="[[בדרך לאן שהוא]] [[חיות אוכל]] בתים מטבחים מתכונים [[מתכונים טבעוניים]]" title="עגבניות בתנור">
+<div created="20200207164959548" modified="20200306154813332" tags="[[בדרך לאן שהוא]] [[חיות אוכל]] בתים מטבחים מתכונים [[מתכונים טבעוניים]]" title="עגבניות בתנור">
 <pre>[img[pictures/agvanyot-batanoor.jpg]]
 
 !!![[יויו]]:
@@ -16594,9 +16607,10 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 במצב הרוח הזה הקפוא הצלחתי להוציא את העגבניות הקטנות מהמקרר ולשטוף אותן למסננת שהנחתי ליד הכיור. למחרת היו לי עוד כ-30 דקות של התעלות בהן כשחיכיתי [[שהכרישה והמנגולד|קודם כל כרישה ומנגולד]] ייצלו חציתי אותן לשניים, ערבבתי אותן עם שמן זית ומלח ים גס והכנסתי אותן לתנור לחצי שעה בחום בינוני. בסוף הוספתי להן טחינה גולמית, מעט בלסמי, עוד קצת שמן זית ומלח ויצא ממרח עגבניות עם טחינה.
 
 
+&lt;&lt;englink [[Ovened tomatoes]]&gt;&gt;
 </pre>
 </div>
-<div created="20170815164314386" modified="20190314145130340" tags="[[כשהם ישנים]] [[חיות אוכל]] מתכונים אפייה" title="עוגות תאנים">
+<div created="20170815164314386" modified="20200306155118019" tags="[[כשהם ישנים]] [[חיות אוכל]] מתכונים אפייה" title="עוגות תאנים">
 <pre>[img[pictures/ugat-teenim.jpg]]
 
 !!![[אווה]]:
@@ -16647,6 +16661,9 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 7. אופים 20-30 דקות - עד שהעוגות מזהיבות.
 
+
+&lt;&lt;englink [[Fig cakes]]&gt;&gt;
+
 </pre>
 </div>
 <div created="20170627152813374" modified="20200216145241692" tags="[[כשהם ישנים]] [[חיות אוכל]] מתכונים אפייה" title="עוגיות חמאה ולימון">
@@ -16681,7 +16698,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[Lemon cookies]]&gt;&gt;
 </pre>
 </div>
-<div created="20170407192128538" modified="20190314145157736" tags="[[מתכוני ארוחת הכריסמס]] מתכונים אפייה" title="עוגיות קימל">
+<div created="20170407192128538" modified="20200306155406949" tags="[[מתכוני ארוחת הכריסמס]] מתכונים אפייה" title="עוגיות קימל">
 <pre>[img[pictures/ugiyot-kimel.jpg]]
 
 !!![[אווה]]:
@@ -16710,7 +16727,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 
-</pre>
+&lt;&lt;englink [[Caraway cookies]]&gt;&gt;</pre>
 </div>
 <div created="20180502183518120" modified="20200217130243259" tags="[[משפחת באומן]] [[חיות אוכל]] [[נאמני הגנזך]] מתכונים אפייה" title="עוגיות שוקולד צ'יפס">
 <pre>[img[pictures/chocolate-chips.jpg]]
@@ -16748,7 +16765,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Chocolate chip cookies]]&gt;&gt;</pre>
 </div>
-<div created="20180516163354756" modified="20190314145226411" tags="[[כשהם ישנים]] [[חיות אוכל]] מתכונים ילדים אפייה" title="עוגת יום הולדת">
+<div created="20180516163354756" modified="20200306155709043" tags="[[כשהם ישנים]] [[חיות אוכל]] מתכונים ילדים אפייה" title="עוגת יום הולדת">
 <pre>[img[pictures/birthday-cake.jpg]]
 
 !!![[אווה]]:
@@ -16775,9 +16792,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 8. מניחים בכלי אטום ומקררים 7-8 שעות לפחות
 
-</pre>
+
+
+
+&lt;&lt;englink [[Birthday cake]]&gt;&gt;</pre>
 </div>
-<div created="20170413101450070" modified="20190314145242708" tags="[[מתכוני ארוחת הכריסמס]] מתכונים אפייה" title="עוגת מוקה">
+<div created="20170413101450070" modified="20200306160129011" tags="[[מתכוני ארוחת הכריסמס]] מתכונים אפייה" title="עוגת מוקה">
 <pre>[img[pictures/ugat-moka.jpg]]
 
 
@@ -16867,9 +16887,11 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 7. עוטפים ומכניסים למקרר לשש שעות לפחות עד להגשה
 
-</pre>
+
+
+&lt;&lt;englink [[Mocha cake]]&gt;&gt;</pre>
 </div>
-<div created="20170908141536225" modified="20200219170846330" tags="[[חיות אוכל]] מתכונים אפייה" title="עוגת סולת">
+<div created="20170908141536225" modified="20200306160428349" tags="[[חיות אוכל]] מתכונים אפייה" title="עוגת סולת">
 <pre>[img[pictures/ugat-solet.jpg]]
 
 
@@ -16914,7 +16936,7 @@ __אופן ההכנה:__
 &lt;&lt;englink [[Semolina cake]]&gt;&gt;
 </pre>
 </div>
-<div created="20170702161916288" modified="20190314145310047" tags="[[חיות אוכל]] [[כשהם ישנים]] מתכונים אפייה" title="עוגת פרג שוקולד">
+<div created="20170702161916288" modified="20200306160830748" tags="[[חיות אוכל]] [[כשהם ישנים]] מתכונים אפייה" title="עוגת פרג שוקולד">
 <pre>[img[pictures/pereg-shokolad.jpg
 ]]
 
@@ -16958,7 +16980,11 @@ __אופן ההכנה:__
     
 8. 5-10 דקות אחרי שהעוגה יצאה מהתנור, משטחים בעדינות עם קצות האצבעות את החלקים הגבוהים שסביב העוגה, ומוזגים בעדינות ומגובה נמוך את הקרם.
 
-9. מוכנה להגשה כשעה לאחר תום האפייה, וטעימה גם כשקרה.</pre>
+9. מוכנה להגשה כשעה לאחר תום האפייה, וטעימה גם כשקרה.
+
+
+
+&lt;&lt;englink [[Poppy seed chocolate cake]]&gt;&gt;</pre>
 </div>
 <div created="20170802173415690" modified="20190314145323257" tags="[[כשהם ישנים]] אפייה" title="עוגת שזיפים">
 <pre>[img[pictures/ugat-shezifim.jpg]]
