--- a/english.html
+++ b/english.html
@@ -329,6 +329,8 @@ Error message and password prompt
 
 <li>Cafe Müller</li>
 
+<li>Caramelized pecan pie</li>
+
 <li>Caraway cookies</li>
 
 <li>Cat Sisters</li>
@@ -343,7 +345,11 @@ Error message and password prompt
 
 <li>Chava Alberstein</li>
 
+<li>Cheese pie</li>
+
 <li>Cheng</li>
+
+<li>Cherry pie</li>
 
 <li>Chez Finnie`s</li>
 
@@ -410,6 +416,8 @@ Error message and password prompt
 <li>Downton Abbey</li>
 
 <li>Dreams that we've dreamt</li>
+
+<li>Éclair with liver stuffing</li>
 
 <li>Edith</li>
 
@@ -611,6 +619,8 @@ Error message and password prompt
 
 <li>Mark</li>
 
+<li>Marzipan balls</li>
+
 <li>Materials</li>
 
 <li>Matza ball soup</li>
@@ -695,7 +705,11 @@ Error message and password prompt
 
 <li>Pasta Mia</li>
 
+<li>Pavlova</li>
+
 <li>Peacock</li>
+
+<li>Pear pie with almonds cream cheese</li>
 
 <li>Pedro Almodóvar</li>
 
@@ -9304,7 +9318,7 @@ A [[soul]] was born by her inspiration. May she rest in peace.
 
  &lt;&lt;heblink [[איילה מלאך פיינס]]&gt;&gt;</pre>
 </div>
-<div created="20200216150039212" modified="20200226072607606" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
+<div created="20200216150039212" modified="20200306170300579" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
 <pre>[img[pictures/afiya.jpg]]
 
 
@@ -9483,6 +9497,14 @@ The idea of the blue marble is the continuation of Iry's thoughts of [[the villa
 
 </pre>
 </div>
+<div created="20200306165452018" modified="20200306165614528" tags="Baking [[Christmas dinner Recipes]] Recipes" title="Caramelized pecan pie">
+<pre>
+[img[pictures/pekan-pie.jpg]]
+
+
+
+ &lt;&lt;heblink [[פאי פקאן עם קרמל]]&gt;&gt;</pre>
+</div>
 <div created="20200306155158597" modified="20200306155315935" tags="Recipes [[Christmas dinner Recipes]] Baking" title="Caraway cookies">
 <pre>
 [img[pictures/ugiyot-kimel.jpg]]
@@ -9583,11 +9605,29 @@ My admired [[screenwriter and director|https://en.wikipedia.org/wiki/Charlie_Kau
  &lt;&lt;heblink [[חוה אלברשטיין]]&gt;&gt;
 </pre>
 </div>
+<div created="20200306164629073" modified="20200306164748165" tags="Recipes Baking [[When they sleep]]" title="Cheese pie">
+<pre>
+[img[pictures/cheese-pie.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[פאי גבינה]]&gt;&gt;</pre>
+</div>
 <div created="20200215210946983" modified="20200215211037832" tags="[[Coen sister]]" title="Cheng">
 <pre>[img[pictures/chang.jpg]]
 
 
  &lt;&lt;heblink [[צ'נג]]&gt;&gt;
+</pre>
+</div>
+<div created="20200306165132859" modified="20200306165318787" tags="Baking Recipes [[Christmas dinner Recipes]]" title="Cherry pie">
+<pre>
+[img[pictures/pie-duvdevanim.jpg]]
+
+
+
+ &lt;&lt;heblink [[פאי דובדבנים]]&gt;&gt;
 </pre>
 </div>
 <div created="20200215122951144" modified="20200217133224213" tags="[[Dandan went]] Houses Laundry [[True stories]] [[Dreams that we've dreamt]]" title="Chez Finnie`s">
@@ -10006,6 +10046,17 @@ This is [[Sweet David Byrne|http://davidbyrne.com/]].
 
  &lt;&lt;heblink [[חלומות שחלמנו]]&gt;&gt;</pre>
 </div>
+<div created="20200306170042186" modified="20200306170325203" tags="Recipes [[Christmas dinner Recipes]]" title="Éclair with liver stuffing">
+<pre>
+[img[pictures/pachzaniyot.jpg]]
+
+
+
+
+
+ &lt;&lt;heblink [[פחזניות ממולאות בכבד קצוץ]]&gt;&gt;
+</pre>
+</div>
 <div created="20200217175503049" modified="20200217182615287" tags="[[The estate]]" title="Edith">
 <pre>[img[pictures/edith-cohen.jpg]]
 
@@ -10167,7 +10218,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20200306160547636" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
+<div created="20200212161010633" modified="20200306170239737" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -11228,6 +11279,15 @@ For example, it seethes me when people use words purposelessly, like the word lo
 
 </pre>
 </div>
+<div created="20200306161503759" modified="20200306161642381" tags="Recipes [[Christmas dinner Recipes]] [[The kitchen by Genevieve]] [[Vegan recipes]]" title="Marzipan balls">
+<pre>
+[img[pictures/marzipan.jpg]]
+
+
+
+ &lt;&lt;heblink [[עיגולי מרציפן]]&gt;&gt;
+</pre>
+</div>
 <div created="20200217205455825" modified="20200219133401376" tags="Coffee Kitchens [[Food addicts]] [[The kitchen by Genevieve]]" title="Materials">
 <pre>[img[pictures/chomarim.jpg]]
 
@@ -11781,6 +11841,14 @@ He did his best at raising [[us|The Baumans]] as good people, and in most cases 
 
  &lt;&lt;heblink [[פסטה מיאה]]&gt;&gt;</pre>
 </div>
+<div created="20200306165732517" modified="20200306165851575" tags="Recipes [[Christmas dinner Recipes]]" title="Pavlova">
+<pre>
+[img[pictures/pavlova.jpg]]
+
+
+ &lt;&lt;heblink [[פבלובה]]&gt;&gt;
+</pre>
+</div>
 <div created="20200219133655778" modified="20200219142218006" tags="[[Here in the Ghetto]] Restaurants" title="Peacock">
 <pre>[img[pictures/peacock.jpg]]
 
@@ -11796,6 +11864,14 @@ Here, in the beloved ghetto, up on Marmorek St, lays the [[Peacock|https://peaco
 
 
 
+</pre>
+</div>
+<div created="20200306164342188" modified="20200306164437399" tags="Baking Recipes [[Christmas dinner Recipes]]" title="Pear pie with almonds cream cheese">
+<pre>
+[img[pictures/pie-agasim.jpg]]
+
+
+ &lt;&lt;heblink [[סרטים]]&gt;&gt;
 </pre>
 </div>
 <div created="20200215104941835" modified="20200215105450147" tags="Mothers Films [[Outer sisters]]" title="Pedro Almodóvar">
