--- a/index.html
+++ b/index.html
@@ -9628,7 +9628,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200306160740698" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200306170352208" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -17035,7 +17035,7 @@ __אופן ההכנה:__
 
 &lt;&lt;englink [[They make peace]]&gt;&gt;</pre>
 </div>
-<div created="20170414012036863" modified="20180605132818306" tags="[[מתכוני ארוחת הכריסמס]] [[המטבח על פי ז'נבייב]] [[מתכונים טבעוניים]] מתכונים" title="עיגולי מרציפן">
+<div created="20170414012036863" modified="20200306161738228" tags="[[מתכוני ארוחת הכריסמס]] [[המטבח על פי ז'נבייב]] [[מתכונים טבעוניים]] מתכונים" title="עיגולי מרציפן">
 <pre>[img[pictures/marzipan.jpg]]
 
 
@@ -17077,7 +17077,7 @@ __אופן ההכנה:__
 
 
 
-
+&lt;&lt;englink [[Marzipan balls]]&gt;&gt;
 </pre>
 </div>
 <div created="20170411211723019" modified="20200208130301825" tags="[[חלומות שחלמנו]] [[בדרך לאן שהוא]]" title="עיר בנויה מרחובות">
@@ -17270,7 +17270,7 @@ May the lord bless your soul, I love you girl
 
 </pre>
 </div>
-<div created="20170415150652294" modified="20190314145344444" tags="[[מתכוני ארוחת הכריסמס]] מתכונים אפייה" title="פאי אגסים עם קרם גבינה ושקדים">
+<div created="20170415150652294" modified="20200306164537252" tags="[[מתכוני ארוחת הכריסמס]] מתכונים אפייה" title="פאי אגסים עם קרם גבינה ושקדים">
 <pre>[img[pictures/pie-agasim.jpg]]
 
 !!![[אווה]]:
@@ -17336,9 +17336,9 @@ May the lord bless your soul, I love you girl
 
 
 
-</pre>
+&lt;&lt;englink [[Pear pie with almonds cream cheese]]&gt;&gt;</pre>
 </div>
-<div created="20190314141937126" modified="20190318103134022" tags="[[כשהם ישנים]] מתכונים אפייה" title="פאי גבינה">
+<div created="20190314141937126" modified="20200306164842555" tags="[[כשהם ישנים]] מתכונים אפייה" title="פאי גבינה">
 <pre>[img[pictures/cheese-pie.jpg]]
 
 !!![[אווה]]:
@@ -17371,9 +17371,13 @@ May the lord bless your soul, I love you girl
 
 14. בעזרת מברשת מברישים מהסירופ דובדנים על הבצק
 
-15. הפאי מוכן :)</pre>
+15. הפאי מוכן :)
+
+
+
+&lt;&lt;englink [[Cheese pie]]&gt;&gt;</pre>
 </div>
-<div created="20170412224620608" modified="20190314145408982" tags="[[מתכוני ארוחת הכריסמס]] מתכונים אפייה" title="פאי דובדבנים">
+<div created="20170412224620608" modified="20200306165417338" tags="[[מתכוני ארוחת הכריסמס]] מתכונים אפייה" title="פאי דובדבנים">
 <pre>[img[pictures/pie-duvdevanim.jpg]]
 
 
@@ -17434,6 +17438,8 @@ May the lord bless your soul, I love you girl
 6.לאפות 40 דקות בערך, עד שמזהיב יפה יפה.
 
 
+
+&lt;&lt;englink [[Cherry pie]]&gt;&gt;
 </pre>
 </div>
 <div created="20170629220725238" modified="20200216145611156" tags="[[כשהם ישנים]] [[חיות אוכל]] מתכונים אפייה" title="פאי נקטרין">
@@ -17494,7 +17500,7 @@ May the lord bless your soul, I love you girl
 
 &lt;&lt;englink [[Nectarine pie]]&gt;&gt;</pre>
 </div>
-<div created="20161118213157653" modified="20190314145435050" tags="[[מתכוני ארוחת הכריסמס]] מתכונים אפייה" title="פאי פקאן עם קרמל">
+<div created="20161118213157653" modified="20200306165708823" tags="[[מתכוני ארוחת הכריסמס]] מתכונים אפייה" title="פאי פקאן עם קרמל">
 <pre>[img[pictures/pekan-pie.jpg]]
 
 !!![[אווה]]:
@@ -17535,7 +17541,12 @@ __אופן ההכנה____
 *להוציא את הבצק מן התנור ולסדר עליו את הפקאנים.
 *למזוג בעדינות מעל הפקאנים את הקרמל מבלי *לכסות אותם לגמרי. (את הקרמל שנשאר אפשר לשמור במקרר או במקפיא ולהשתמש בו לפאי נוסף.)
 *לאפות ב-170 מעלות 40-50 דקות., עד שהבצק זהוב.
-</pre>
+
+
+
+
+
+&lt;&lt;englink [[Caramelized pecan pie]]&gt;&gt;</pre>
 </div>
 <div created="20170714125945456" modified="20200220165719418" tags="סדרות סרטים טלוויזיה" title="פארגו">
 <pre>[img[pictures/fargo.jpg]]
@@ -17550,7 +17561,7 @@ __אופן ההכנה____
 
 </pre>
 </div>
-<div created="20170414153603797" modified="20180605133703050" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="פבלובה">
+<div created="20170414153603797" modified="20200306165947254" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="פבלובה">
 <pre>[img[pictures/pavlova.jpg]]
 
 !!![[פיליפ]]:
@@ -17578,7 +17589,12 @@ __אופן ההכנה____
 
 אני אורז כל דבר לחוד, מחבר ברגע המתאים
 
-וכולם נהנים מאד.</pre>
+וכולם נהנים מאד.
+
+
+
+&lt;&lt;englink [[Pavlova]]&gt;&gt;
+</pre>
 </div>
 <div created="20180201131829444" modified="20200215105540264" tags="[[אחיות חוץ]] אימהות סרטים" title="פדרו אלמודובר">
 <pre>[img[pictures/pedro-almodovar.jpg]]
@@ -17674,7 +17690,7 @@ __אופן ההכנה____
 
 &lt;&lt;englink [[Puaa]]&gt;&gt;</pre>
 </div>
-<div created="20170411134035592" modified="20180605133753982" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="פחזניות ממולאות בכבד קצוץ">
+<div created="20170411134035592" modified="20200306170424620" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="פחזניות ממולאות בכבד קצוץ">
 <pre>[img[pictures/pachzaniyot.jpg]]
 
 !!![[אנג'ליק]]:
@@ -17716,7 +17732,9 @@ __אופן ההכנה____
 
 מגישים אותן עם [[חזרת]].
 
-</pre>
+
+
+&lt;&lt;englink [[Éclair with liver stuffing]]&gt;&gt;</pre>
 </div>
 <div created="20180314180839992" modified="20180605132316681" tags="[[מתכונים טבעוניים]] [[מתכוני ארוחת הכריסמס]] [[חיות אוכל]] הצוות [[למה הדבר דומה]] מתכונים" title="פטה טבעוני">
 <pre>[img[pictures/vegan-pate.jpg]]
