--- a/english.html
+++ b/english.html
@@ -11866,12 +11866,12 @@ Here, in the beloved ghetto, up on Marmorek St, lays the [[Peacock|https://peaco
 
 </pre>
 </div>
-<div created="20200306164342188" modified="20200306164437399" tags="Baking Recipes [[Christmas dinner Recipes]]" title="Pear pie with almonds cream cheese">
+<div created="20200306164342188" modified="20200306171154788" tags="Baking Recipes [[Christmas dinner Recipes]]" title="Pear pie with almonds cream cheese">
 <pre>
 [img[pictures/pie-agasim.jpg]]
 
 
- &lt;&lt;heblink [[סרטים]]&gt;&gt;
+ &lt;&lt;heblink [[פאי אגסים עם קרם גבינה ושקדים]]&gt;&gt;
 </pre>
 </div>
 <div created="20200215104941835" modified="20200215105450147" tags="Mothers Films [[Outer sisters]]" title="Pedro Almodóvar">
